PPC64: Fix C++ Interpreter after '7195622: CheckUnhandledOops has limited usefulness now'

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • port-stage-ppc-aix
    • Affects Version/s: port-stage-ppc-aix
    • Component/s: hotspot
    • None
    • master

        The fixes which re-enabled CheckUnhandledOops have not been applied to the C++-interpreter. Also at some places, the C++-Interpreter was never prepared to run with -XX:+CheckUnhandledOops.

              Assignee:
              Volker Simonis
              Reporter:
              Volker Simonis
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: