8028514: PPC64: Fix C++ Interpreter after '7195622: CheckUnhandledOops has limited usefulness now'

Fix CPP-interpreter after CheckUnhandledOops was re-enabled in the fastdebug build

Reviewed-by: kvn, dholmes, lfoltan